Add and style nav bar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/calm-compass-sm-logo.png" alt="Calm Compass logo" class="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#symptom-check">Symptom Check</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#calming-tools">Calming Tools</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#professional-help">Professional Help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <h1>Welcome to Calm Compass</h1>
     <p>Your guide to finding peace and tranquility in everyday life.</p>
 
