--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/images/calm-compass-sm-logo.png" alt="Calm Compass logo" class="logo">
@@ -52,8 +52,18 @@
         </div>
     </nav>
 
-    <h1>Welcome to Calm Compass</h1>
-    <p>Your guide to finding peace and tranquility in everyday life.</p>
+    <!-- Header containing hero section -->
+    <header class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-xl-6 text-center">
+                <h1>Welcome to Calm Compass</h1>
+                <p>Start understanding your mind with simple, accessible information.</p>
+            </div>
+    </header>
+
+    <main>
+
+    </main>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -62,6 +72,28 @@
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/2e6f8ddc3b.js" crossorigin="anonymous"></script>
+
+    <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
+    <script>
+        document
+            .querySelectorAll(".navbar-collapse .nav-link")
+            .forEach((link) => {
+                link.addEventListener("click", function (e) {
+                    let section = document.querySelector(e.target.getAttribute("href"));
+                    if (section) {
+                        e.preventDefault(); // Prevent default anchor click behavior
+                        let navbarHeight = document.querySelector(".navbar-toggler").offsetHeight;
+                        window.scroll({
+                            top: section.offsetTop - navbarHeight, // Adjust for navbar height
+                            behavior: "smooth",
+                        });
+                        document
+                            .querySelector(".navbar-collapse")
+                            .classList.remove("show"); // Collapse navbar
+                    }
+                });
+            });
+    </script>
 </body>
 
 </html>
