--- a/index.html
+++ b/index.html
@@ -55,19 +55,22 @@
     </nav>
 
     <!-- Header containing hero section -->
-    <header class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-xl-6 text-center">
+    <header class="hero">
+        <div class="container">
+            <div class="row"></div>
+            <div class="col-12 text-center">
                 <h1>Welcome to Calm Compass</h1>
                 <p>Start understanding your mind with simple, accessible information.</p>
             </div>
+        </div>
+        </div>
     </header>
 
     <!-- Main content holding all sections -->
     <main>
 
         <!-- Symptom Check section -->
-        <section id="symptom-check" class="container">
+        <section id="symptom-check section" class="container">
             <div class="row">
                 <div class="col-12"></div>
                 <h2>Symptom Check</h2>
@@ -88,7 +91,7 @@
         </section>
 
         <!-- Calming Tools section -->
-        <section id="calming-tools" class="container">
+        <section id="calming-tools section" class="container">
             <div class="row">
                 <div class="col-12"></div>
                 <h2>Calming Tools</h2>
@@ -109,7 +112,7 @@
         </section>
 
         <!-- Professional Help section -->
-        <section id="professional-help" class="container">
+        <section id="professional-help section" class="container">
             <div class="row">
                 <div class="col-12 text-center">
                     <h2>Professional Help</h2>
@@ -119,7 +122,7 @@
         </section>
 
         <!-- Testimonials section -->
-        <section id="testimonials" class="container">
+        <section id="testimonials section" class="container">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <h2>Testimonials</h2>
