Remove section from IDs and add to class instead

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main>
 
         <!-- Symptom Check section -->
-        <section id="symptom-check section" class="container">
+        <section id="symptom-check" class="container section">
             <div class="row">
                 <div class="col-12"></div>
                 <h2>Symptom Check</h2>
@@ -91,7 +91,7 @@
         </section>
 
         <!-- Calming Tools section -->
-        <section id="calming-tools section" class="container">
+        <section id="calming-tools" class="container section">
             <div class="row">
                 <div class="col-12"></div>
                 <h2>Calming Tools</h2>
@@ -112,7 +112,7 @@
         </section>
 
         <!-- Professional Help section -->
-        <section id="professional-help section" class="container">
+        <section id="professional-help" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
                     <h2>Professional Help</h2>
@@ -122,7 +122,7 @@
         </section>
 
         <!-- Testimonials section -->
-        <section id="testimonials section" class="container">
+        <section id="testimonials" class="container section">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <h2>Testimonials</h2>
