Add and style symptom check cards and buttons

--- a/index.html
+++ b/index.html
@@ -76,16 +76,52 @@
                 <h2>Symptom Check</h2>
                 <p>Assess your mental health with our quick symptom checker.</p>
                 <div class="col-12 col-md-6 col-xl-3">
-                    <p>Symptom Card 1</p>
+                    <div class="card bg-transparent">
+                        <img src="assets/images/stress.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                            alt="Icon of a stressed person">
+                        <div class="card-body">
+                            <h5 class="card-title">Stress</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card’s content.</p>
+                            <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
-                    <p>Symptom Card 2</p>
+                    <div class="card bg-transparent">
+                        <img src="assets/images/anxiety.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                            alt="Icon of a stressed person">
+                        <div class="card-body">
+                            <h5 class="card-title">Stress</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card’s content.</p>
+                            <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
-                    <p>Symptom Card 3</p>
+                    <div class="card bg-transparent">
+                        <img src="assets/images/lonely.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                            alt="Icon of a stressed person">
+                        <div class="card-body">
+                            <h5 class="card-title">Stress</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card’s content.</p>
+                            <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
-                    <p>Symptom Card 4</p>
+                    <div class="card bg-transparent">
+                        <img src="assets/images/low-mood.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                            alt="Icon of a stressed person">
+                        <div class="card-body">
+                            <h5 class="card-title">Stress</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card’s content.</p>
+                            <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
