Added content to symptom check cards

--- a/index.html
+++ b/index.html
@@ -77,48 +77,57 @@
                 <p>Assess your mental health with our quick symptom checker.</p>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
-                        <img src="assets/images/stress.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                        <img src="assets/images/stress.png" class="mx-auto card-img-top"
                             alt="Icon of a stressed person">
                         <div class="card-body">
                             <h5 class="card-title">Stress</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card’s content.</p>
+                            <!-- <p class="card-text fst-italic">When the pressure feels heavier than your energy.</p> -->
+                            <p class="card-text">Stress is
+                                your body’s natural response to demanding situations—it’s trying to help you rise to a
+                                challenge. However, when that pressure becomes constant, it can feel like you are
+                                carrying the weight of the world without a moment to set it down.</p>
                             <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
-                        <img src="assets/images/anxiety.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                        <img src="assets/images/anxiety.png" class="mx-auto card-img-top"
                             alt="Icon of a stressed person">
                         <div class="card-body">
-                            <h5 class="card-title">Stress</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card’s content.</p>
+                            <h5 class="card-title">Anxiety</h5>
+                            <p class="card-text">Anxiety is a feeling of unease, worry, or fear about what might happen
+                                in the future. While it can feel physically and mentally exhausting, it isn't a sign
+                                that you are broken; it is your brain trying to keep you safe, even when there is no
+                                immediate danger.</p>
                             <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
-                        <img src="assets/images/lonely.png" class="mx-auto card-img-top" style="max-width: 50%;"
-                            alt="Icon of a stressed person">
+                        <img src="assets/images/lonely.png" class="mx-auto card-img-top"
+                            alt=" Icon of a stressed person">
                         <div class="card-body">
-                            <h5 class="card-title">Stress</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card’s content.</p>
+                            <h5 class="card-title">Loneliness</h5>
+                            <p class="card-text">Loneliness is the feeling of disconnection, feeling alone even when you
+                                are in a crowded room. Feeling this way doesn’t mean you are unlikable or destined to be
+                                isolated—it simply means you have a capacity for connection that isn't currently being
+                                met.</p>
                             <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
-                        <img src="assets/images/low-mood.png" class="mx-auto card-img-top" style="max-width: 50%;"
+                        <img src="assets/images/low-mood.png" class="mx-auto card-img-top"
                             alt="Icon of a stressed person">
                         <div class="card-body">
-                            <h5 class="card-title">Stress</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card’s content.</p>
+                            <h5 class="card-title">Low Mood</h5>
+                            <p class="card-text">Low mood can feel like someone turned down the volume on your life. You
+                                might feel sad, empty, or simply numb, finding it difficult to enjoy the things you
+                                usually love. This isn’t a reflection of your character or "laziness" — it is a state of
+                                emotional exhaustion.</p>
                             <a href="#stress-tools" class="btn custom-button-outline">What you can do</a>
                         </div>
                     </div>
