--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="col-12 text-center">
                 <h1>Welcome to Calm Compass</h1>
                 <p>Start understanding your mind with simple, accessible information.</p>
+                <a href="#symptom-check" class="btn btn-light" role="button" tabindex="0">How are you feeling?</a>
             </div>
         </div>
         </div>
