Start on calming tools section and add alt txt to imag in symptom check section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
                         <img src="assets/images/anxiety.png" class="mx-auto card-img-top"
-                            alt="Icon of a stressed person">
+                            alt="Icon of an anxious person">
                         <div class="card-body">
                             <h5 class="card-title">Anxiety</h5>
                             <p class="card-text">Anxiety is a feeling of unease, worry, or fear about what might happen
@@ -107,8 +107,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
-                        <img src="assets/images/lonely.png" class="mx-auto card-img-top"
-                            alt=" Icon of a stressed person">
+                        <img src="assets/images/lonely.png" class="mx-auto card-img-top" alt=" Icon of a lonely person">
                         <div class="card-body">
                             <h5 class="card-title">Loneliness</h5>
                             <p class="card-text">Loneliness is the feeling of disconnection, feeling alone even when you
@@ -122,7 +121,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card bg-transparent">
                         <img src="assets/images/low-mood.png" class="mx-auto card-img-top"
-                            alt="Icon of a stressed person">
+                            alt="Icon of a person with low mood">
                         <div class="card-body">
                             <h5 class="card-title">Low Mood</h5>
                             <p class="card-text">Low mood can feel like someone turned down the volume on your life. You
@@ -139,11 +138,71 @@
         <!-- Calming Tools section -->
         <section id="calming-tools" class="container section">
             <div class="row">
-                <div class="col-12"></div>
-                <h2>Calming Tools</h2>
-                <p>Explore a variety of tools and techniques to help you find calm.</p>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <p>Tool Accordion 1</p>
+                <div class="col-12">
+                    <h2>Calming Tools</h2>
+                    <p>Explore a variety of tools and techniques to help you find calm.</p>
+                </div>
+                <div id="stress-tools" class="col-12 col-md-6 col-xl-3">
+                    <p><strong>Stress Relievers</strong></p>
+                    <div class="accordion" id="accordion-stress-tools">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse"
+                                data-bs-parent="#accordion-stress-tools">
+                                <div class="accordion-body">
+                                    <strong>This is the first item’s accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It’s also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordion-stress-tools">
+                                <div class="accordion-body">
+                                    <strong>This is the second item’s accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It’s also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordion-stress-tools">
+                                <div class="accordion-body">
+                                    <strong>This is the third item’s accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It’s also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <p>Tool Accordion 2</p>
