--- a/index.html
+++ b/index.html
@@ -425,10 +425,15 @@
 
         <!-- Professional Help section -->
         <section id="professional-help" class="container section">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h2>Professional Help</h2>
-                    <p>Find resources and contacts for professional mental health support.</p>
+            <div class="row justify-content-center">
+                <div class="col-12 col-xl-8 text-center">
+                    <h2>Still Stuck?</h2>
+                    If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
+                    health professional can make a real difference. Here are some resources to help you take that next
+                    step.</p>
+                    <button type="button" class="btn custom-button-outline" data-bs-toggle="modal"
+                        data-bs-target="#professional-help-modal">Find
+                        Professional Help</button>
                 </div>
             </div>
         </section>
@@ -460,6 +465,47 @@
             </div>
         </div>
     </footer>
+
+    <!-- Modal for Professional Help section -->
+    <div class="modal fade" id="professional-help-modal" tabindex="-1" aria-labelledby="professionalHelpModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h1 class="modal-title fs-5" id="professionalHelpModalLabel">Professional Help Resources</h1>
+                    <button type="button" class="btn-close custom-button-outline position-absolute end-0 me-3"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    Reaching out to a professional is a sign of strength, not weakness. Below you'll find
+                    trusted resources and helplines to connect you with qualified support.
+                </div>
+                <div class="modal-body">
+                    <ul>
+                        <li><a href="https://www.nhs.uk/nhs-services/mental-health-services/where-to-get-urgent-help-for-mental-health/"
+                                target="_blank" rel="noopener">NHS Urgent Mental Health Helpline</a> or call 111 for
+                            urgent mental health support when it's not a life-threatening emergency</li>
+                        <li><a href="https://www.samaritans.org/" target="_blank" rel="noopener">Samaritans</a> for
+                            anyone struggling to cope or having thoughts of suicide</li>
+                        <li><a href="https://www.crisistextline.org/" target="_blank" rel="noopener">Crisis Text Line
+                                (Shout)</a> for anyone in crisis who needs immediate support via text</li>
+                        <li><a href="https://www.nhs.uk/mental-health/feelings-symptoms-behaviours/feelings-and-symptoms/"
+                                target="_blank" rel="noopener">NHS Mental Health Support</a> for guidance and free NHS
+                            therapy services</li>
+                        <li><a href="https://www.mind.org.uk/" target="_blank" rel="noopener">Mind</a> for general
+                            mental health support and information</li>
+                        <li><a href="https://www.anxietyuk.org.uk/" target="_blank" rel="noopener">Anxiety UK</a> for
+                            support and information on anxiety disorders</li>
+                        <li><a href="https://www.ageuk.org.uk/" target="_blank" rel="noopener">Age UK</a> for support
+                            for older adults experiencing loneliness or mental health issues</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn custom-button-outline" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap -->
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
