Finalise and style footer

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         </section>
 
         <!-- Testimonials section -->
-        <section id="testimonials" class="container section">
+        <section id="testimonials" class="container section mb-4">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <h2>Testimonials</h2>
@@ -451,16 +451,26 @@
 
     <!-- Footer -->
     <!-- mt-auto class pushes footer to bottom of page-->
-    <footer class="mt-auto">
-        <div id="footer" class="container">
+    <footer id="footer" class="mt-auto">
+        <div class="container section my-auto">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-6 text-center">
+                <div class="col-12 col-md-8 col-lg-6 text-center">
                     <!-- Copyright -->
                     <p>&copy; 2024 Calm Compass. All rights reserved.</p>
                 </div>
-                <div class="col-12 col-md-6 text-center">
+                <div class="socials col-12 col-md-4 col-lg-6 text-center">
                     <!-- Social Media Icons Links -->
-                    <p>Social Media Icons Links</p>
+                    <a href="https://www.instagram.com" target="_blank"
+                        aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"
+                        aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.x.com" target="_blank" aria-label="Visit our X page (opens in a new tab)"
+                        rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.linkedin.com" target="_blank"
+                        aria-label="Visit our LinkedIn page (opens in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
