Add quiet wisdom section and style, change navbar accordingly

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <a class="nav-link" href="#calming-tools">Calming Tools</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#professional-help">Professional Help</a>
+                        <a class="nav-link" href="#quiet-wisdom">Quiet Wisdom</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonials">Testimonials</a>
+                        <a class="nav-link" href="#professional-help">Professional Help</a>
                     </li>
                 </ul>
             </div>
@@ -423,31 +423,88 @@
             </div>
         </section>
 
-        <!-- Professional Help section -->
-        <section id="professional-help" class="container section">
+        <!-- Testimonials section -->
+        <section id="quiet-wisdom" class="container section">
+            <h2 class="text-center">Quiet Wisdom</h2>
             <div class="row justify-content-center">
-                <div class="col-12 col-xl-8 text-center">
-                    <h2>Still Stuck?</h2>
-                    If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
-                    health professional can make a real difference. Here are some resources to help you take that next
-                    step.</p>
-                    <button type="button" class="btn custom-button-outline" data-bs-toggle="modal"
-                        data-bs-target="#professional-help-modal">Find
-                        Professional Help</button>
+                <div class="col-12 text-center">
+                    <div id="carousel-quotes" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="quotes text-center">
+                                    <img src="assets/images/banksy.png" class="mb-4"
+                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                    <p class="fst-italic">"If you get tired, learn to rest, not quit."</p>
+                                    <p class="fw-bold">- Banksy</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="quotes text-center">
+                                    <img src="assets/images/murakami.png" class="mb-4"
+                                        alt="Book cover of 1Q84, a novel by Haruki Murakami">
+                                    <p class="fst-italic">"Where there is light, there must be shadow; where there is
+                                        shadow, there must be light."</p>
+                                    <p class="fw-bold">- Haruki Murakami</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="quotes text-center">
+                                    <img src="assets/images/maya-angelou.png" class="mb-4"
+                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                    <p class="fst-italic">"Do the best you can until you know better. Then when you know
+                                        better, do better."</p>
+                                    <p class="fw-bold">- Maya Angelou</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="quotes text-center">
+                                    <img src="assets/images/leonard-cohen.png" class="mb-4"
+                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                    <p class="fst-italic">"There is a crack in everything, that's how the light gets
+                                        in."</p>
+                                    <p class="fw-bold">- Leonard Cohen</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="quotes text-center">
+                                    <img src="assets/images/virginia-wolf.png" class="mb-4"
+                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                    <p class="fst-italic">"No need to hurry. No need to sparkle. No need to be anybody
+                                        but oneself."</p>
+                                    <p class="fw-bold">— Virginia Woolf</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-quotes"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-quotes"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- Testimonials section -->
-        <section id="testimonials" class="container section mb-4">
-            <div class="row justify-content-center">
-                <div class="col-12 text-center">
-                    <h2>Testimonials</h2>
-                    <p>Read what others have to say about their journey with Calm Compass.</p>
-                </div>
-            </div>
-        </section>
     </main>
+    <!-- Professional Help section -->
+    <section id="professional-help" class="container section mb-4">
+        <div class="row justify-content-center">
+            <div class="col-12 col-xl-8 text-center">
+                <h2>Still Stuck?</h2>
+                If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
+                health professional can make a real difference. Here are some resources to help you take that next
+                step.</p>
+                <button type="button" class="btn custom-button-outline" data-bs-toggle="modal"
+                    data-bs-target="#professional-help-modal">Find
+                    Professional Help</button>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <!-- mt-auto class pushes footer to bottom of page-->
