Add bottom margin to prof help section

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
                 health professional can make a real difference. Here are some resources to help you take that next
                 step.</p>
-                <button type="button" class="btn custom-button-outline" data-bs-toggle="modal"
+                <button type="button" class="btn custom-button-outline mb-4" data-bs-toggle="modal"
                     data-bs-target="#professional-help-modal">Find
                     Professional Help</button>
             </div>
