change wording accordion as more responsive

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#low-mood-collapseTwo" aria-expanded="false"
                                     aria-controls="low-mood-collapseTwo">
-                                    The Sound of Momentum
+                                    Music Matters
                                 </button>
                             </h6>
                             <div id="low-mood-collapseTwo" class="accordion-collapse collapse"
