updated alt labels carousel

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             <div class="carousel-item">
                                 <div class="quotes text-center">
                                     <img src="assets/images/maya-angelou.png" class="mb-4"
-                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                        alt="Portrait of Maya Angelou">
                                     <p class="fst-italic">"Do the best you can until you know better. Then when you know
                                         better, do better."</p>
                                     <p class="fw-bold">- Maya Angelou</p>
@@ -459,7 +459,7 @@
                             <div class="carousel-item">
                                 <div class="quotes text-center">
                                     <img src="assets/images/leonard-cohen.png" class="mb-4"
-                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                        alt="Portrait of Leonard Cohen">
                                     <p class="fst-italic">"There is a crack in everything, that's how the light gets
                                         in."</p>
                                     <p class="fw-bold">- Leonard Cohen</p>
@@ -468,7 +468,7 @@
                             <div class="carousel-item">
                                 <div class="quotes text-center">
                                     <img src="assets/images/virginia-wolf.png" class="mb-4"
-                                        alt="Girl letting go of heart-shaped balloon, by Banksy">
+                                        alt="Portrait of Virginia Woolf">
                                     <p class="fst-italic">"No need to hurry. No need to sparkle. No need to be anybody
                                         but oneself."</p>
                                     <p class="fw-bold">— Virginia Woolf</p>
