style footer social icons with hover

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div id="anxiety-tools" class="col-12 col-md-6 col-xl-3">
                     <h5>Anxiety Calmers</h5>
                     <img src="assets/images/anxiety-relievers.png" class="d-block mx-auto mb-2 card-img-top"
-                        alt="Icon of a person with low mood">
+                        alt="Icon of a person's head with a symbol for mindfulness inside">
                     <div class="accordion" id="accordion-anxiety-tools">
                         <div class="accordion-item">
                             <h6 class="accordion-header">
@@ -291,7 +291,7 @@
                 <div id="loneliness-tools" class="col-12 col-md-6 col-xl-3">
                     <h5>Companionship Builders</h5>
                     <img src="assets/images/loneliness-relievers.png" class="d-block mx-auto mb-2 card-img-top"
-                        alt="Icon of a person with low mood">
+                        alt="Icon of four hands holding each other">
                     <div class="accordion" id="accordion-loneliness-tools">
                         <div class="accordion-item">
                             <h6 class="accordion-header">
@@ -358,7 +358,7 @@
                 <div id="low-mood-tools" class="col-12 col-md-6 col-xl-3">
                     <h5>Mood Movers</h5>
                     <img src="assets/images/low-mood-relievers.png" class="d-block mx-auto mb-2 card-img-top"
-                        alt="Icon of a person with low mood">
+                        alt="Icon of person with good well-being">
                     <div class="accordion" id="accordion-low-mood-tools">
                         <div class="accordion-item">
                             <h6 class="accordion-header">
